Kubernetes Essential Training Application Development/kube-ex/03/ex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example.com
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: blue-green.example.com
      http:
        paths:
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: blue
                port:
                  number: 80
              #serviceName: blue
              #servicePort: 80
          - path: /green
            pathType: Prefix
            backend:
              service:
                name: green
                port:
                  number: 80
              #serviceName: green
              #servicePort: 80
    - host: nginx.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
              #serviceName: nginx
              #servicePort: 80
